ghc-6.2/hslibs/win32/Win32Menu_stub_ffi.h

extern void prim_assignMenuItemInfo(void * arg1,UINT arg2,UINT arg3,UINT arg4,HMENU arg5,HBITMAP arg6,HBITMAP arg7,DWORD arg8,void * arg9,int arg10);
extern UINT prim_mIIM_CHECKMARKS();
extern UINT prim_mIIM_DATA();
extern UINT prim_mIIM_ID();
extern UINT prim_mIIM_STATE();
extern UINT prim_mIIM_SUBMENU();
extern UINT prim_mIIM_TYPE();
extern void* prim_getMenuItemInfo(HMENU arg1,UINT arg2,int arg3,UINT arg4);
extern void * access_prim_getMenuItemInfo_gc_res2(HsPtr);
extern int access_prim_getMenuItemInfo_gc_failed(HsPtr);
extern void* access_prim_getMenuItemInfo_gc_failstring(HsPtr);
extern void* prim_getMenuItemRect(HWND arg1,HMENU arg2,UINT arg3);
extern LONG access_prim_getMenuItemRect_gc_res1(HsPtr);
extern LONG access_prim_getMenuItemRect_gc_res2(HsPtr);
extern LONG access_prim_getMenuItemRect_gc_res3(HsPtr);
extern LONG access_prim_getMenuItemRect_gc_res4(HsPtr);
extern int access_prim_getMenuItemRect_gc_failed(HsPtr);
extern void* access_prim_getMenuItemRect_gc_failstring(HsPtr);
extern int prim_hiliteMenuItem(HWND arg1,HMENU arg2,UINT arg3,UINT arg4);
extern void* prim_insertMenuItem(HMENU arg1,UINT arg2,int arg3,void * arg4);
extern int access_prim_insertMenuItem_gc_failed(HsPtr);
extern void* access_prim_insertMenuItem_gc_failstring(HsPtr);
extern void* prim_loadMenu(HINSTANCE arg1,LPCSTR arg2);
extern HMENU access_prim_loadMenu_res1(HsPtr);
extern int access_prim_loadMenu_gc_failed(HsPtr);
extern void* access_prim_loadMenu_gc_failstring(HsPtr);
extern UINT prim_menuItemFromPoint(HWND arg1,HMENU arg2,LONG gc_arg2,LONG gc_arg3);
extern void* prim_setMenuDefaultItem(HMENU arg1,UINT arg2,int arg3);
extern int access_prim_setMenuDefaultItem_gc_failed(HsPtr);
extern void* access_prim_setMenuDefaultItem_gc_failstring(HsPtr);
extern void* prim_setMenuItemBitmaps(HMENU arg1,UINT arg2,UINT arg3,HBITMAP arg4,HBITMAP arg5);
extern int access_prim_setMenuItemBitmaps_gc_failed(HsPtr);
extern void* access_prim_setMenuItemBitmaps_gc_failstring(HsPtr);
extern void* prim_destroyMenu(HMENU arg1);
extern int access_prim_destroyMenu_gc_failed(HsPtr);
extern void* access_prim_destroyMenu_gc_failstring(HsPtr);
extern void* prim_deleteMenu(HMENU arg1,UINT arg2,UINT arg3);
extern int access_prim_deleteMenu_gc_failed(HsPtr);
extern void* access_prim_deleteMenu_gc_failstring(HsPtr);
extern void* prim_setMenuItemInfo(HMENU arg1,UINT arg2,int arg3,UINT arg4,void * arg5);
extern int access_prim_setMenuItemInfo_gc_failed(HsPtr);
extern void* access_prim_setMenuItemInfo_gc_failstring(HsPtr);
extern void* prim_trackPopupMenu(HMENU arg1,UINT arg2,int arg3,int arg4,HWND arg5,LONG gc_arg2,LONG gc_arg3,LONG gc_arg4,LONG gc_arg5);
extern int access_prim_trackPopupMenu_gc_failed(HsPtr);
extern void* access_prim_trackPopupMenu_gc_failstring(HsPtr);