ghc-6.2/hslibs/win32/Win32Menu.hs


assignMenuItemInfo :: Addr -> UINT -> UINT -> UINT -> HMENU -> HBITMAP -> HBITMAP -> DWORD -> Addr -> Int -> IO ()
assignMenuItemInfo arg1 arg2 arg3 arg4 arg5 arg6 arg7 arg8 arg9 arg10 =
  prim_assignMenuItemInfo arg1 arg2 arg3 arg4 arg5 arg6 arg7 arg8 arg9 arg10
foreign import  ccall unsafe "Win32Menu_stub_ffi.h prim_assignMenuItemInfo" prim_assignMenuItemInfo :: Addr -> Word32 -> Word32 -> Word32 -> Addr -> Addr -> Addr -> Word32 -> Addr -> Int -> IO ()

type MenuItemMask = UINT

foreign import  ccall unsafe "Win32Menu_stub_ffi.h prim_mIIM_CHECKMARKS" mIIM_CHECKMARKS :: MenuItemMask
foreign import  ccall unsafe "Win32Menu_stub_ffi.h prim_mIIM_DATA" mIIM_DATA :: MenuItemMask
foreign import  ccall unsafe "Win32Menu_stub_ffi.h prim_mIIM_ID" mIIM_ID :: MenuItemMask
foreign import  ccall unsafe "Win32Menu_stub_ffi.h prim_mIIM_STATE" mIIM_STATE :: MenuItemMask
foreign import  ccall unsafe "Win32Menu_stub_ffi.h prim_mIIM_SUBMENU" mIIM_SUBMENU :: MenuItemMask
foreign import  ccall unsafe "Win32Menu_stub_ffi.h prim_mIIM_TYPE" mIIM_TYPE :: MenuItemMask

getMenuItemInfo :: HMENU -> MenuItem -> Bool -> MenuItemMask -> IO MenuItemInfo
getMenuItemInfo arg1 arg2 gc_arg1 arg4 =
  (marshall_bool_ gc_arg1) >>= \ (arg3) ->
  prim_getMenuItemInfo arg1 arg2 arg3 arg4
  >>= \ gc_result ->
  access_prim_getMenuItemInfo_gc_res2 (gc_result :: Addr) >>= \ gc_res2 ->
  access_prim_getMenuItemInfo_gc_failed (gc_result :: Addr) >>= \ gc_failed ->
  access_prim_getMenuItemInfo_gc_failstring (gc_result :: Addr) >>= \ gc_failstring ->
  if ( gc_failed /= (0::Int))
  then unmarshall_string_ gc_failstring >>=  ioError  . userError
  else ( unmarshall_menuItemInfo  (gc_res2)) >>= \ gc_res1 ->
       (return (gc_res1))
foreign import  ccall unsafe "Win32Menu_stub_ffi.h prim_getMenuItemInfo" prim_getMenuItemInfo :: Addr -> Word32 -> Int -> Word32 -> IO (Addr)
foreign import ccall unsafe "Win32Menu_stub_ffi.h" access_prim_getMenuItemInfo_gc_res2 :: Addr -> IO (Addr)
foreign import ccall unsafe "Win32Menu_stub_ffi.h" access_prim_getMenuItemInfo_gc_failed :: Addr -> IO (Int)
foreign import ccall unsafe "Win32Menu_stub_ffi.h" access_prim_getMenuItemInfo_gc_failstring :: Addr -> IO (Addr)

getMenuItemRect :: HWND -> HMENU -> UINT -> IO RECT
getMenuItemRect arg1 arg2 arg3 =
  prim_getMenuItemRect arg1 arg2 arg3
  >>= \ gc_result ->
  access_prim_getMenuItemRect_gc_res1 (gc_result :: Addr) >>= \ gc_res1 ->
  access_prim_getMenuItemRect_gc_res2 (gc_result :: Addr) >>= \ gc_res2 ->
  access_prim_getMenuItemRect_gc_res3 (gc_result :: Addr) >>= \ gc_res3 ->
  access_prim_getMenuItemRect_gc_res4 (gc_result :: Addr) >>= \ gc_res4 ->
  access_prim_getMenuItemRect_gc_failed (gc_result :: Addr) >>= \ gc_failed ->
  access_prim_getMenuItemRect_gc_failstring (gc_result :: Addr) >>= \ gc_failstring ->
  if ( gc_failed /= (0::Int))
  then unmarshall_string_ gc_failstring >>=  ioError  . userError
  else (return ((gc_res1,gc_res2,gc_res3,gc_res4)))
foreign import  ccall unsafe "Win32Menu_stub_ffi.h prim_getMenuItemRect" prim_getMenuItemRect :: Addr -> Addr -> Word32 -> IO (Addr)
foreign import ccall unsafe "Win32Menu_stub_ffi.h" access_prim_getMenuItemRect_gc_res1 :: Addr -> IO (Int32)
foreign import ccall unsafe "Win32Menu_stub_ffi.h" access_prim_getMenuItemRect_gc_res2 :: Addr -> IO (Int32)
foreign import ccall unsafe "Win32Menu_stub_ffi.h" access_prim_getMenuItemRect_gc_res3 :: Addr -> IO (Int32)
foreign import ccall unsafe "Win32Menu_stub_ffi.h" access_prim_getMenuItemRect_gc_res4 :: Addr -> IO (Int32)
foreign import ccall unsafe "Win32Menu_stub_ffi.h" access_prim_getMenuItemRect_gc_failed :: Addr -> IO (Int)
foreign import ccall unsafe "Win32Menu_stub_ffi.h" access_prim_getMenuItemRect_gc_failstring :: Addr -> IO (Addr)

hiliteMenuItem :: HWND -> HMENU -> MenuItem -> MenuFlag -> IO Bool
hiliteMenuItem arg1 arg2 arg3 arg4 =
  prim_hiliteMenuItem arg1 arg2 arg3 arg4
  >>= \  gc_res2  ->
  (unmarshall_bool_ gc_res2) >>= \ gc_res1 ->
  (return (gc_res1))
foreign import  ccall unsafe "Win32Menu_stub_ffi.h prim_hiliteMenuItem" prim_hiliteMenuItem :: Addr -> Addr -> Word32 -> Word32 -> IO (Int)

insertMenuItem :: HMENU -> MenuItem -> Bool -> MenuItemInfo -> IO ()
insertMenuItem arg1 arg2 gc_arg1 gc_arg2 =
  (marshall_bool_ gc_arg1) >>= \ (arg3) ->
  ( marshall_menuItemInfo  gc_arg2) >>= \ arg4 ->
  prim_insertMenuItem arg1 arg2 arg3 arg4
  >>= \ gc_result ->
  access_prim_insertMenuItem_gc_failed (gc_result :: Addr) >>= \ gc_failed ->
  access_prim_insertMenuItem_gc_failstring (gc_result :: Addr) >>= \ gc_failstring ->
  if ( gc_failed /= (0::Int))
  then unmarshall_string_ gc_failstring >>=  ioError  . userError
  else (return (()))
foreign import  ccall unsafe "Win32Menu_stub_ffi.h prim_insertMenuItem" prim_insertMenuItem :: Addr -> Word32 -> Int -> Addr -> IO (Addr)
foreign import ccall unsafe "Win32Menu_stub_ffi.h" access_prim_insertMenuItem_gc_failed :: Addr -> IO (Int)
foreign import ccall unsafe "Win32Menu_stub_ffi.h" access_prim_insertMenuItem_gc_failstring :: Addr -> IO (Addr)

type Menu = LPCSTR
-- intToMenu :: Int -> Menu
-- intToMenu i = makeIntResource (toWord i)

loadMenu :: MbHINSTANCE -> Menu -> IO HMENU
loadMenu arg1 arg2 =
  (case arg1 of {
      Nothing -> (return (nullHANDLE));
      (Just arg1) -> (return ((arg1)))
   }) >>= \ (arg1) ->
  prim_loadMenu arg1 arg2
  >>= \ gc_result ->
  access_prim_loadMenu_res1 (gc_result :: Addr) >>= \ res1 ->
  access_prim_loadMenu_gc_failed (gc_result :: Addr) >>= \ gc_failed ->
  access_prim_loadMenu_gc_failstring (gc_result :: Addr) >>= \ gc_failstring ->
  if ( gc_failed /= (0::Int))
  then unmarshall_string_ gc_failstring >>=  ioError  . userError
  else (return (res1))
foreign import  ccall unsafe "Win32Menu_stub_ffi.h prim_loadMenu" prim_loadMenu :: Addr -> Addr -> IO (Addr)
foreign import ccall unsafe "Win32Menu_stub_ffi.h" access_prim_loadMenu_res1 :: Addr -> IO (Addr)
foreign import ccall unsafe "Win32Menu_stub_ffi.h" access_prim_loadMenu_gc_failed :: Addr -> IO (Int)
foreign import ccall unsafe "Win32Menu_stub_ffi.h" access_prim_loadMenu_gc_failstring :: Addr -> IO (Addr)

-- Dealing with mappings to/from structs is a pain in GC,
-- so we'll leave this one out for now.
-- %fun LoadMenuIndirect :: MenuTemplate -> IO HMENU

menuItemFromPoint :: HWND -> HMENU -> POINT -> IO UINT
menuItemFromPoint arg1 arg2 gc_arg1 =
  case gc_arg1 of { (gc_arg2,gc_arg3) ->
  prim_menuItemFromPoint arg1 arg2 gc_arg2 gc_arg3
  >>= \  res1  ->
  (return (res1))}
foreign import  ccall unsafe "Win32Menu_stub_ffi.h prim_menuItemFromPoint" prim_menuItemFromPoint :: Addr -> Addr -> Int32 -> Int32 -> IO (Word32)

setMenuDefaultItem :: HMENU -> MenuItem -> Bool -> IO ()
setMenuDefaultItem arg1 arg2 gc_arg1 =
  (marshall_bool_ gc_arg1) >>= \ (arg3) ->
  prim_setMenuDefaultItem arg1 arg2 arg3
  >>= \ gc_result ->
  access_prim_setMenuDefaultItem_gc_failed (gc_result :: Addr) >>= \ gc_failed ->
  access_prim_setMenuDefaultItem_gc_failstring (gc_result :: Addr) >>= \ gc_failstring ->
  if ( gc_failed /= (0::Int))
  then unmarshall_string_ gc_failstring >>=  ioError  . userError
  else (return (()))
foreign import  ccall unsafe "Win32Menu_stub_ffi.h prim_setMenuDefaultItem" prim_setMenuDefaultItem :: Addr -> Word32 -> Int -> IO (Addr)
foreign import ccall unsafe "Win32Menu_stub_ffi.h" access_prim_setMenuDefaultItem_gc_failed :: Addr -> IO (Int)
foreign import ccall unsafe "Win32Menu_stub_ffi.h" access_prim_setMenuDefaultItem_gc_failstring :: Addr -> IO (Addr)

setMenuItemBitmaps :: HMENU -> MenuItem -> MenuFlag -> HBITMAP -> HBITMAP -> IO ()
setMenuItemBitmaps arg1 arg2 arg3 arg4 arg5 =
  prim_setMenuItemBitmaps arg1 arg2 arg3 arg4 arg5
  >>= \ gc_result ->
  access_prim_setMenuItemBitmaps_gc_failed (gc_result :: Addr) >>= \ gc_failed ->
  access_prim_setMenuItemBitmaps_gc_failstring (gc_result :: Addr) >>= \ gc_failstring ->
  if ( gc_failed /= (0::Int))
  then unmarshall_string_ gc_failstring >>=  ioError  . userError
  else (return (()))
foreign import  ccall unsafe "Win32Menu_stub_ffi.h prim_setMenuItemBitmaps" prim_setMenuItemBitmaps :: Addr -> Word32 -> Word32 -> Addr -> Addr -> IO (Addr)
foreign import ccall unsafe "Win32Menu_stub_ffi.h" access_prim_setMenuItemBitmaps_gc_failed :: Addr -> IO (Int)
foreign import ccall unsafe "Win32Menu_stub_ffi.h" access_prim_setMenuItemBitmaps_gc_failstring :: Addr -> IO (Addr)

destroyMenu :: HMENU -> IO ()
destroyMenu arg1 =
  prim_destroyMenu arg1
  >>= \ gc_result ->
  access_prim_destroyMenu_gc_failed (gc_result :: Addr) >>= \ gc_failed ->
  access_prim_destroyMenu_gc_failstring (gc_result :: Addr) >>= \ gc_failstring ->
  if ( gc_failed /= (0::Int))
  then unmarshall_string_ gc_failstring >>=  ioError  . userError
  else (return (()))
foreign import  ccall unsafe "Win32Menu_stub_ffi.h prim_destroyMenu" prim_destroyMenu :: Addr -> IO (Addr)
foreign import ccall unsafe "Win32Menu_stub_ffi.h" access_prim_destroyMenu_gc_failed :: Addr -> IO (Int)
foreign import ccall unsafe "Win32Menu_stub_ffi.h" access_prim_destroyMenu_gc_failstring :: Addr -> IO (Addr)

deleteMenu :: HMENU -> MenuItem -> MenuFlag -> IO ()
deleteMenu arg1 arg2 arg3 =
  prim_deleteMenu arg1 arg2 arg3
  >>= \ gc_result ->
  access_prim_deleteMenu_gc_failed (gc_result :: Addr) >>= \ gc_failed ->
  access_prim_deleteMenu_gc_failstring (gc_result :: Addr) >>= \ gc_failstring ->
  if ( gc_failed /= (0::Int))
  then unmarshall_string_ gc_failstring >>=  ioError  . userError
  else (return (()))
foreign import  ccall unsafe "Win32Menu_stub_ffi.h prim_deleteMenu" prim_deleteMenu :: Addr -> Word32 -> Word32 -> IO (Addr)
foreign import ccall unsafe "Win32Menu_stub_ffi.h" access_prim_deleteMenu_gc_failed :: Addr -> IO (Int)
foreign import ccall unsafe "Win32Menu_stub_ffi.h" access_prim_deleteMenu_gc_failstring :: Addr -> IO (Addr)

setMenuItemInfo :: HMENU -> MenuItem -> Bool -> MenuItemMask -> MenuItemInfo -> IO ()
setMenuItemInfo arg1 arg2 gc_arg1 arg4 gc_arg2 =
  (marshall_bool_ gc_arg1) >>= \ (arg3) ->
  ( marshall_menuItemInfo  gc_arg2) >>= \ arg5 ->
  prim_setMenuItemInfo arg1 arg2 arg3 arg4 arg5
  >>= \ gc_result ->
  access_prim_setMenuItemInfo_gc_failed (gc_result :: Addr) >>= \ gc_failed ->
  access_prim_setMenuItemInfo_gc_failstring (gc_result :: Addr) >>= \ gc_failstring ->
  if ( gc_failed /= (0::Int))
  then unmarshall_string_ gc_failstring >>=  ioError  . userError
  else (return (()))
foreign import  ccall unsafe "Win32Menu_stub_ffi.h prim_setMenuItemInfo" prim_setMenuItemInfo :: Addr -> Word32 -> Int -> Word32 -> Addr -> IO (Addr)
foreign import ccall unsafe "Win32Menu_stub_ffi.h" access_prim_setMenuItemInfo_gc_failed :: Addr -> IO (Int)
foreign import ccall unsafe "Win32Menu_stub_ffi.h" access_prim_setMenuItemInfo_gc_failstring :: Addr -> IO (Addr)

trackPopupMenu :: HMENU -> TrackMenuFlag -> Int -> Int -> HWND -> RECT -> IO ()
trackPopupMenu arg1 arg2 arg3 arg4 arg5 gc_arg1 =
  case gc_arg1 of { (gc_arg2,gc_arg3,gc_arg4,gc_arg5) ->
  prim_trackPopupMenu arg1 arg2 arg3 arg4 arg5 gc_arg2 gc_arg3 gc_arg4 gc_arg5
  >>= \ gc_result ->
  access_prim_trackPopupMenu_gc_failed (gc_result :: Addr) >>= \ gc_failed ->
  access_prim_trackPopupMenu_gc_failstring (gc_result :: Addr) >>= \ gc_failstring ->
  if ( gc_failed /= (0::Int))
  then unmarshall_string_ gc_failstring >>=  ioError  . userError
  else (return (()))}
foreign import  ccall unsafe "Win32Menu_stub_ffi.h prim_trackPopupMenu" prim_trackPopupMenu :: Addr -> Word32 -> Int -> Int -> Addr -> Int32 -> Int32 -> Int32 -> Int32 -> IO (Addr)
foreign import ccall unsafe "Win32Menu_stub_ffi.h" access_prim_trackPopupMenu_gc_failed :: Addr -> IO (Int)
foreign import ccall unsafe "Win32Menu_stub_ffi.h" access_prim_trackPopupMenu_gc_failstring :: Addr -> IO (Addr)
